--- a/templates/search-ginsearch-patch.html
+++ b/templates/search-ginsearch-patch.html
@@ -11,7 +11,7 @@
     <div class="container">
         <form id="searchForm">
             <div class="form-group">
-                <label for="search">Поиск:</label>
+                <label for="search">Поиск в Информационной системе "История геологии и горного дела":</label>
                 <input type="text" id="search" name="search" required>
             </div>
             <div class="form-group">
