--- a/templates/search-ginsearch-patch.html
+++ b/templates/search-ginsearch-patch.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="logobox">
+            <img src="static/logo.gif" class="logo">
+        </div>
         <form id="searchForm">
             <div class="form-group">
                 <label for="search">Поиск в Информационной системе "История геологии и горного дела":</label>
