--- a/templates/search-ginsearch-view.html
+++ b/templates/search-ginsearch-view.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Search results</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Search Page</title>
+    <link rel="stylesheet" href="static/styles-view.css">
+    <title>Document</title>
 </head>
 <body>
-    <ul id="navigation">
-    {% for i in data %}
-        <li><a href="http://higeo.ginras.ru/view-record.php?tbl=person&id={{ i[0] }}">{{ i[1] }}</a></li>
-    {% endfor %}
-    </ul>
+    <div class="container">
+        <form id="searchForm">
+            <ul id="navigation">
+                {% for i in data %}
+                    <li><a href="http://higeo.ginras.ru/view-record.php?tbl=person&id={{ i[0] }}">{{ i[1] }}</a></li>
+                {% endfor %}
+                </ul>
+        </form>
+    </div>
+
+    <script src="static/script.js"></script>
 </body>
 </html>
