--- a/static/styles.css
+++ b/static/styles.css
@@ -76,3 +76,15 @@ body {
     background-size: 12px;
     padding-right: 40px;
 }
+
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 125px;
+}
+
+.logobox{
+    padding-bottom: 60px;
+}
