--- a/static/styles-view.css
+++ b/static/styles-view.css
@@ -5,7 +5,9 @@ body {
     align-items: center;
     margin: 0;
     background: rgb(2,0,36);
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,35,121,1) 35%, rgba(0,179,255,1) 100%);
+    background: #f8efec;
+    height: 100%;
+    padding: 60px;
 }
 
 .container {
@@ -15,4 +17,5 @@ body {
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
     max-width: 400px;
     width: 100%;
+    align-items: center;
 }
